[package]
name = "bitwisetools"
version = "1.0.3"
authors = ["Mark Muchane <mark@pztron.io>"]
edition = "2018"
license = "GPL-3.0"
description = "Encode and decode bitwise fields"
readme = "README.md"
homepage = "https://gitlab.com/pztron/rust/bitwisetools"
repository = "https://gitlab.com/pztron/rust/bitwisetools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]